# dotdiff

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/: diff.rs  error.rs  lib.rs  load.rs  main.rs  output.rs  schema.rs
tests/: cli.rs  conformance.rs
