[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dotdiff"
dynamic = ["version"]
description = "Semantic diff for JSON, YAML, TOML, and NDJSON: a structured, agent-friendly change-list instead of line noise."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Ruben J. Jongejan <ruben.jongejan@gmail.com>" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rvben/dotdiff"
Repository = "https://github.com/rvben/dotdiff"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
